--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis in magni
+    soluta aut labore libero itaque voluptates sequi rerum ipsam.
+  </body>
 </html>
