login page added to project in login.html

--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <form>
-      <input />
+      <input type="text" />
       <button>Click Me</button>
     </form>
   </body>
