--- a/login.html
+++ b/login.html
@@ -10,6 +10,9 @@
     <form>
       <input type="text" />
       <button>Click Me</button>
+      <p>
+        <strong>This is Git</strong>
+      </p>
     </form>
   </body>
 </html>
