--- a/order.html
+++ b/order.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <p>you can order here</p>
-    <p>overwriting existing commit</p>
+    <p>overwriting existing commit by changing comment..</p>
+    <p>creating new commit</p>
   </body>
 </html>
